days/day4/labs/L4.4-networkpolicy/manifests/03-core-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-edge-to-payment
  namespace: axispay-core
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: payment-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          axispay.io/zone: edge
      podSelector:
        matchLabels:
          app.kubernetes.io/name: edge-gateway
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-edge-to-merchant
  namespace: axispay-core
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: merchant-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          axispay.io/zone: edge
      podSelector:
        matchLabels:
          app.kubernetes.io/name: edge-gateway
    ports:
    - protocol: TCP
      port: 8080
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: payment-service
    ports:
    - protocol: TCP
      port: 8080
  - from:
    - namespaceSelector:
        matchLabels:
          axispay.io/zone: async
      podSelector:
        matchLabels:
          app.kubernetes.io/name: notification-service
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payment-to-core-services
  namespace: axispay-core
spec:
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: In
      values:
      - fraud-service
      - routing-service
      - ledger-service
      - customer-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: payment-service
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-async-to-payment-read
  namespace: axispay-core
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: payment-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          axispay.io/zone: async
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - settlement-service
          - reporting-service
          - recon-worker
    ports:
    - protocol: TCP
      port: 8080
