days/day4/labs/L4.4-networkpolicy/manifests/04-core-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-core-to-data
  namespace: axispay-core
spec:
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: In
      values:
      - payment-service
      - ledger-service
      - customer-service
      - merchant-service
      - fraud-service
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          axispay.io/zone: data
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 6379
    - protocol: TCP
      port: 5672
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-core-internal
  namespace: axispay-core
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: payment-service
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - merchant-service
          - fraud-service
          - routing-service
          - ledger-service
          - customer-service
    ports:
    - protocol: TCP
      port: 8080
