days/day4/labs/L4.4-networkpolicy/manifests/05-data-tier.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-core-and-async-to-data
  namespace: axispay-data
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          axispay.io/zone: core
    - namespaceSelector:
        matchLabels:
          axispay.io/zone: async
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 6379
    - protocol: TCP
      port: 5672
